# simple-pgo

./: .gitignore  CMakeLists.txt  README.md  main.c
core/: CMakeLists.txt  graph.c  graph.h  jacobian_ops.c  jacobian_ops.h  optimizer.c  optimizer.h
include/simple_pgo/: core_api.h
types/: CMakeLists.txt  edge_se2.c  edge_se2.h  vertex_se2.c  vertex_se2.h
visualization/: CMakeLists.txt  g2o_parser.c  g2o_parser.h  viewer.c  viewer.h
